--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,7 @@
 $fa-font-path: "../../node_modules/font-awesome/fonts";
+$FontPathOpenSans: "../../node_modules/npm-font-open-sans/fonts";
 
 // colors
 $primary-color: #2CAF71;
+$primary-font-color: #4B4B4B;
+$secondary-font-color: #83898E;
