--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,35 @@
 @import './variables.scss';
 @import '../../node_modules/font-awesome/scss/font-awesome.scss';
+@import '../../node_modules/npm-font-open-sans/open-sans.scss';
 @import './components/index.scss';
 
+html {
+  font-size: 16px;
+  font-family: 'Open Sans', 'Tahoma', 'sans-serif';
+  line-height: 1.5;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
   background-color: #F7F8FA;
+  color: $primary-font-color;
+}
+
+h1 {
+  font-size: 36px;
+  line-height: 1.3333;
+}
+
+h2 {
+  font-size: 32px;
+  line-height: 1.2;
+}
+
+h3 {
+  font-size: 24px;
+  line-height: 1.1;
+}
+
+h4 {
+  font-size: 20px;
+  line-height: 1;
 }
