--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,5 +1,5 @@
 @import './grid.scss';
 @import './reset.scss';
 @import './app-header.scss';
-@import './products-list.scss';
+@import './products-area.scss';
 @import './product.scss';
