--- a/src/styles/components/product.scss
+++ b/src/styles/components/product.scss
@@ -6,9 +6,11 @@
   min-height: 155px;
   padding: 40px 50px;
   background-color: #FFF;
+  border-left: 1px solid #E2EAF0;
+  border-right: 1px solid #E2EAF0;
+  border-bottom: 1px solid #E2EAF0;
 
   &__left {
-    width: calc(100% - 75px);
     padding-right: 50px;
   }
 
@@ -16,7 +18,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 75px;
   }
 
   &__name {
@@ -35,5 +36,18 @@
     font-weight: 600;
     line-height: 1;
     text-align: right;
+    padding: 5px;
+  }
+
+  &__purchase-button {
+    font-size: 16px;
+    color: $primary-color;
+    background: white;
+    cursor: pointer;
+    padding: 10px 5px;
+    border: none;
+    user-select: none;
+    white-space: nowrap;
+    outline: none;
   }
 }
