Adds basic styles for CartProduct component

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,3 +5,8 @@ $FontPathOpenSans: "../../node_modules/npm-font-open-sans/fonts";
 $primary-color: #2CAF71;
 $primary-font-color: #4B4B4B;
 $secondary-font-color: #83898E;
+
+// cart product
+$cart-product-name-width: 60%;
+$cart-product-amount-width: 20%;
+$cart-product-price-width: 20%;
