--- a/src/styles/components/cart-product.scss
+++ b/src/styles/components/cart-product.scss
@@ -8,19 +8,35 @@
 
 .cart-product {
   display: flex;
+  padding: 10px;
+  background-color: #FFF;
+  border-right: 1px solid #E2EAF0;
+  border-left: 1px solid #E2EAF0;
+  border-top: 1px solid #E2EAF0;
+
+  .list__item:last-of-type & {
+    border-bottom: 1px solid #E2EAF0;
+  }
 
   &__name {
     @extend %ellipsis;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 5px;
     width: $cart-product-name-width;
   }
 
   &__amount {
     @extend %ellipsis;
+    font-size: 14px;
     width: $cart-product-amount-width;
+    text-align: center;
   }
 
   &__price {
     @extend %ellipsis;
+    font-size: 14px;
     width: $cart-product-price-width;
+    text-align: right;
   }
 }
