--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -3,4 +3,5 @@
 @import './app-header.scss';
 @import './products-area.scss';
 @import './product.scss';
+@import './sorting.scss';
 @import './cart-product.scss';
