--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -4,5 +4,6 @@
 @import './products-area.scss';
 @import './product.scss';
 @import './sorting.scss';
+@import './total-price.scss';
 @import './cart-product.scss';
 @import './cart-area.scss';
