Updates styles for purchase button

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -6,5 +6,5 @@
 @import './sorting.scss';
 @import './total-price.scss';
 @import './cart-product.scss';
-@import './cart-area.scss';
 @import './cart-area-header.scss';
+@import './cart-area-footer.scss';
