--- a/src/styles/components/cart-area-footer.scss
+++ b/src/styles/components/cart-area-footer.scss
@@ -9,6 +9,8 @@
 
   &__purchase-button {
     font-size: 16px;
+    font-weight: 600;
+    border-radius: 3px;
     line-height: 48px;
     color: #FFF;
     background-color: $primary-color;
