--- a/src/styles/components/cart-product.scss
+++ b/src/styles/components/cart-product.scss
@@ -14,6 +14,10 @@
   border-left: 1px solid #E2EAF0;
   border-top: 1px solid #E2EAF0;
 
+  .list__item:last-of-type & {
+    border-bottom: 1px solid #E2EAF0;
+  }
+
   &__name {
     @extend %ellipsis;
     font-size: 14px;
